--- a/styles/style.css
+++ b/styles/style.css
@@ -264,6 +264,22 @@ footer a {
     text-decoration: none;
     color: inherit;
     margin: 20px 20px;
+    transition: transform 0.5s;;
+}
+
+footer a:hover i {
+    text-shadow: 0 0 3px #fff;
+}
+
+footer a:hover {
+    --neon-color: rgb(157, 211, 255);
+    text-shadow: 0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 82px var(--neon-color),
+    0 0 92px var(--neon-color),
+    0 0 102px var(--neon-color);
+    transform: scale(1.05);
 }
 
 
