--- a/styles/style.css
+++ b/styles/style.css
@@ -272,7 +272,6 @@ footer a:hover i {
 }
 
 footer a:hover {
-    --neon-color: rgb(157, 211, 255);
     text-shadow: 0 0 7px #fff,
     0 0 10px #fff,
     0 0 21px #fff;
@@ -280,7 +279,7 @@ footer a:hover {
 }
 
 
-/* @keyframes from-left {
+ @keyframes from-left {
     0% {
         position: relative;
         left: -100vw;
@@ -319,7 +318,7 @@ footer a:hover {
         position: relative;
         bottom: 0;
     }
-} */
+}
 
 
 @media (max-width: 700px) {
