--- a/styles/style.css
+++ b/styles/style.css
@@ -280,7 +280,7 @@ footer a:hover {
 }
 
 
-/* @keyframes from-left {
+ @keyframes from-left {
     0% {
         position: relative;
         left: -100vw;
@@ -319,7 +319,7 @@ footer a:hover {
         position: relative;
         bottom: 0;
     }
-} */
+}
 
 
 @media (max-width: 700px) {
